--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,11 @@
     {% endfor %}
   </ul>
   <ul class="copyright">
+      <li>
+        <h3>Elérhetőség</h3>
+        <h5>Tel: +36 30 437 7581</h5>
+        <h5>Email: kovirita68@gmail.com</h5>
+    </li>
     <li>&copy; {% assign thisyear = site.time | date: "%Y" %}
     {% if site.first_published %}
       {% capture diff %}{{ site.first_published | minus:thisyear }}{% endcapture %}
